--- a/manifest.json
+++ b/manifest.json
@@ -8,40 +8,48 @@
     "theme_color":"#142B30",
     "orientation":"portrait-primary",
     "icons":[
+        
         {
-            "src":"/images/icons/keepscore_x512.png",
+            "src":"/images/icons/maskable_icon_x512.png",
             "type":"image/png",
-            "sizes":"512x512"
+            "sizes":"512x512",
+            "purpose":"maskable"
         },
         {
-            "src":"/images/icons/keepscore_x384.png",
+            "src":"/images/icons/maskable_icon_x384.png",
             "type":"image/png",
-            "sizes":"384x384"
+            "sizes":"384x384",
+            "purpose":"maskable"
         },
         {
-            "src":"/images/icons/keepscore_x192.png",
+            "src":"/images/icons/maskable_icon_x192.png",
             "type":"image/png",
-            "sizes":"192x192"
+            "sizes":"192x192",
+            "purpose":"maskable"
         },
         {
-            "src":"/images/icons/keepscore_x128.png",
+            "src":"/images/icons/maskable_icon_x128.png",
             "type":"image/png",
-            "sizes":"128x128"
+            "sizes":"128x128",
+            "purpose":"maskable"
         },
         {
-            "src":"/images/icons/keepscore_x96.png",
+            "src":"/images/icons/maskable_icon_x96.png",
             "type":"image/png",
-            "sizes":"96x96"
+            "sizes":"96x96",
+            "purpose":"maskable"
         },
         {
-            "src":"/images/icons/keepscore_x72.png",
+            "src":"/images/icons/maskable_icon_x72.png",
             "type":"image/png",
-            "sizes":"72x72"
+            "sizes":"72x72",
+            "purpose":"maskable"
         },
         {
-            "src":"/images/icons/keepscore_x48.png",
+            "src":"/images/icons/maskable_icon_x48.png",
             "type":"image/png",
-            "sizes":"48x48"
+            "sizes":"48x48",
+            "purpose":"maskable"
         }
     ]
 }
